Basic ChArUco board generation done and video gen.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,17 @@ project(stereo-camera-calibration)
 
 set(CMAKE_CXX_STANDARD 23)
 
-find_package(OpenCV 4.11 REQUIRED COMPONENTS aruco)
+find_package(OpenCV 4.11 REQUIRED)
 
-#include_directories(${OpenCV_INCLUDE_DIRS})
+
+if (TARGET opencv_aruco OR OpenCV_aruco_FOUND)
+    message(STATUS "ArUco module found!")
+else ()
+    message(STATUS "ArUco module not found! skipping Aruco calibration module")
+endif ()
+
+include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_executable(stereo-camera-calibration main.cpp)
 
-#target_link_libraries(stereo-camera-calibration PRIVATE
-#        opencv_core
-#        opencv_imgproc
-#        opencv_highgui
-#        opencv_imgcodecs
-#        opencv_calib3d
-#        opencv_aruco
-#)
+target_link_libraries(stereo-camera-calibration ${OpenCV_LIBS})
