Updated prophesee recorder
Changed to CDFrameGenerator that handles multithreading.
And changed to MTWindow for the same reason.

--- a/recoding/CMakeLists.txt
+++ b/recoding/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(MetavisionSDK COMPONENTS core stream ui REQUIRED)
 
 find_package(CLI11 REQUIRED)
 
-find_package(OpenCV REQUIRED)
+find_package(OpenCV COMPONENTS aruco REQUIRED)
 
 find_package(Boost COMPONENTS program_options REQUIRED)
 add_compile_definitions(BOOST_BIND_GLOBAL_PLACEHOLDERS) ## needed to get rid of warning `#pragma message: The practice of declaring the Bind placeholders (_1, _2, ...)`
@@ -18,6 +18,3 @@ add_executable(prophesee-dvs-recorder prophesee_dvs_recorder.cpp)
 target_link_libraries(prophesee-dvs-recorder PRIVATE
         MetavisionSDK::core MetavisionSDK::stream MetavisionSDK::ui
         ${OpenCV_LIBS})
-
-add_executable(metavision-viewer metavision_viewer.cpp)
-target_link_libraries(metavision-viewer PRIVATE MetavisionSDK::stream MetavisionSDK::core MetavisionSDK::ui Boost::program_options ${OpenCV_LIBS})
