--- a/qodana.yaml
+++ b/qodana.yaml
@@ -3,7 +3,7 @@
 ####################################################################################################################
 
 version: "1.0"
-linter: jetbrains/qodana-cdnet:2025.2.1
+linter: JetBrains/qodana-action@27de2a744479d1d731934eeaf79287575ebc5dd3
 profile:
   name: qodana.recommended
 include:
