Made parent class CameraWorker
Made a parent class, so that now the differen child classes can be
placed inside a single vector.

--- a/recoding/CMakeLists.txt
+++ b/recoding/CMakeLists.txt
@@ -5,6 +5,7 @@ project(stereo-camera-calibration
 
 set(CMAKE_CXX_STANDARD 23)
 
+
 find_package(MetavisionSDK COMPONENTS core stream ui REQUIRED)
 find_package(pylon REQUIRED)
 
@@ -15,21 +16,37 @@ find_package(OpenCV REQUIRED)
 find_package(Boost COMPONENTS program_options REQUIRED)
 add_compile_definitions(BOOST_BIND_GLOBAL_PLACEHOLDERS) ## needed to get rid of warning `#pragma message: The practice of declaring the Bind placeholders (_1, _2, ...)`
 
+
+include(FetchContent)
+FetchContent_Declare(
+        readerwriterqueue
+        GIT_REPOSITORY https://github.com/cameron314/readerwriterqueue
+        GIT_TAG master
+)
+FetchContent_MakeAvailable(readerwriterqueue)
+
+
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(StereoCalibration
+add_executable(
+        StereoCalibration
         camera_manager.cpp
+        recorders/camera_worker.cpp recorders/camera_worker.hpp
         recorders/prophesee_dvs_recorder.cpp recorders/prophesee_dvs_recorder.hpp
         recorders/basler_rgb_recorder.cpp recorders/basler_rgb_recorder.hpp
         utility.cpp utility.hpp
         videoViewer.cpp VideoViewer.hpp
-
+        #        detection_validator.cpp                 detection_validator.h
 )
 
-target_link_libraries(StereoCalibration PRIVATE
+target_link_libraries(
+        StereoCalibration
+        PRIVATE
         ${OpenCV_LIBS}
         MetavisionSDK::core MetavisionSDK::stream MetavisionSDK::ui
         pylon::pylon
+        PUBLIC
+        readerwriterqueue
 )
 
 #add_executable(
