--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,4 @@
-cmake_minimum_required(VERSION 3.23...3.27)
-project(stereo-camera-calibration
-LANGUAGES CXX
-VERSION 0.1)
 
-set(CMAKE_CXX_STANDARD 23)
 
-add_subdirectory(recoding)
+#add_subdirectory(recoding)
 add_subdirectory(tools)
