--- a/config.toml
+++ b/config.toml
@@ -5,25 +5,74 @@ square_length = 0.0295
 marker_length = 0.0206
 
 [detection]
+#Dictionary options:
+#DICT_4X4_50=0, DICT_4X4_100=1, DICT_4X4_250=2, DICT_4X4_1000=3,
+#DICT_5X5_50=4, DICT_5X5_100=5, DICT_5X5_250=6, DICT_5X5_1000=7,
+#DICT_6X6_50=8, DICT_6X6_100=9, DICT_6X6_250=10, DICT_6X6_1000=11,
+#DICT_7X7_50=12, DICT_7X7_100=13, DICT_7X7_250=14, DICT_7X7_1000=15,
+#DICT_ARUCO_ORIGINAL = 16
 charuco_dictionary = 8
 detection_interval = 2
-minimum_corners = 0.125
-refine = false
+minimum_corner_fraction = 0.125
+
+
+[detection.charuco_parameters]
+#refine = false
+#min_markers = 2
+
+[detection.detector_parameters]
+#adaptiveThreshWinSizeMin = 3
+#adaptiveThreshWinSizeMax = 23
+#adaptiveThreshWinSizeStep = 10
+#adaptiveThreshConstant = 7
+#minMarkerPerimeterRate = 0.03
+#maxMarkerPerimeterRate = 4.
+#polygonalApproxAccuracyRate = 0.03
+#minCornerDistanceRate = 0.05
+#minDistanceToBorder = 3
+#minMarkerDistanceRate = 0.05
+#cornerRefinementMethod = 0
+#cornerRefinementWinSize = 5
+#cornerRefinementMaxIterations = 30
+#cornerRefinementMinAccuracy = 0.1
+#markerBorderBits = 1
+#perspectiveRemovePixelPerCell = 4
+#perspectiveRemoveIgnoredMarginPerCell = 0.13
+#maxErroneousBitsInBorderRate = 0.35
+#minOtsuStdDev = 5.0
+#errorCorrectionRate = 0.6
+#aprilTagQuadDecimate = 0.0
+#aprilTagQuadSigma = 0.0
+#aprilTagMinClusterPixels = 5
+#aprilTagMaxNmaxima = 10
+#aprilTagCriticalRad = 0.174533
+#aprilTagMaxLineFitMse = 10.0
+#aprilTagMinWhiteBlackDiff = 5
+#aprilTagDeglitch = 0
+#detectInvertedMarker = false
+#useAruco3Detection = false
+#minSideLengthCanonicalImg = 32
+#minMarkerLengthRatioOriginalImg = 0.0
 
 [recording]
 fps = 30
 accumulation_time = 33333
-slave_workers = "prophesee"
+slave_workers = ["prophesee"]
 master_worker = "basler"
+cam_placement = [1, 0, 2]
+master_camera = 2
 
-[recording.prophesee]
-save_eventfile = true
+[recording.workers.prophesee]
+save_eventfile = true # Optional
+cam_uuid = ["123", "456"] # Optional
 
-[recording.basler]
+[recording.workers.basler]
+
+cam_uuid = ["789"] # Optional
 
 
 [viewing]
 views_horizontal = 3
 
-
+[calibration]
 
