CLI/config progress and refinement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ add_executable(
         src/config/recording.cpp src/config/recording.hpp
         src/config/viewing.cpp src/config/viewing.hpp
         src/config/orchestrator.cpp src/config/orchestrator.hpp
+        src/cli/orchestrator.cpp
+        src/cli/orchestrator.hpp
 )
 
 target_link_libraries(
