Updated .gitignore to exclude config and data dir

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,7 @@ vcpkg-manifest-install.log
 vcpkg_installed/
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,jetbrains+all,cmake,vcpkg
+
+### Custom ###
+data/
+config.toml
