Added helper functions and program defaults
One helper function is to check if a given jobId exists at the given path the other one checks whether the job data JSON is available. Added two global defaults one for config file name the other one for job data file name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,10 +66,9 @@ add_executable(
         src/global_variables/cli_defaults.hpp
         src/executors/board_runner.cpp src/executors/board_runner.hpp
         src/executors/recording_runner.cpp src/executors/recording_runner.hpp
-        src/executors/validation_runner.cpp
-        src/executors/validation_runner.hpp
-        src/executors/calibration_runner.cpp
-        src/executors/calibration_runner.hpp
+        src/executors/validation_runner.cpp src/executors/validation_runner.hpp
+        src/executors/calibration_runner.cpp src/executors/calibration_runner.hpp
+
 )
 
 target_link_libraries(
